# solana-experiments

./: .gitignore  data.json  package.json  sandbox.ts  tsconfig.json  vitest.config.ts
lib/: delimitedProto.ts  demo.ts
programs/demo/: Cargo.toml  instructions.proto  package.json  program_id.md  state.proto
programs/demo/src/: entrypoint.rs  instruction.rs  instructions.rs  lib.rs  macros.rs  mod.rs  processor.rs  state.rs
programs/demo/tests/: functional.rs
tests/: demo.ts  demo.ts.old  utils.ts
tests/demo/: another.test.ts  basic.test.ts  instructions.test.ts
tests/models/: Add.ts.old  Echo.ts.old  Instruction.ts.old
