[package]
name = "demo"
version = "1.0.0"
description = "yo!"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
quick-protobuf = { git = "https://github.com/AlaaZorkane/quick-protobuf" }
solana-program = "1.8.1"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
